Fix overflow scrollable error

--- a/client/src/screens/CartPage.css
+++ b/client/src/screens/CartPage.css
@@ -37,7 +37,7 @@
 }
 
 
-#add-product-form {
+#cart-add-form {
     padding: 40px 20px;
     border-radius: 10px;
     background-color: white;
